--- a/static/style.css
+++ b/static/style.css
@@ -13,12 +13,6 @@ body {
   filter: blur(10);
 }
 
-@media only screen and (max-width: 900px) {
-  #myVideo {
-    left: 0;
-  }
-}
-
 .intro {
   margin-top: 10rem;
 }
@@ -36,6 +30,7 @@ body {
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
+  font-size: 3vw;
   animation: 
     typing 4s steps(50,end),
     blink-caret .5s step-end infinite;
@@ -56,4 +51,13 @@ body {
 footer {
   position: relative;
   z-index: 1;
+}
+
+@media only screen and (max-width: 900px) {
+  #myVideo {
+    left: 0;
+  }
+  .typewriter p {
+    font-size: 4vw;
+  }
 }
